<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark1"
    android:orientation="vertical"
    tools:context=".ConfigAlarma">

    <ImageView
        android:id="@+id/imgGuardar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:maxHeight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guardar" />

    <ImageView
        android:id="@+id/imgAtras"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"

        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atras" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/configAlarma"
        android:textAlignment="center"

        android:textColor="@color/white2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/dark3"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="143dp"
                    android:layout_height="19dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="Repetir"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="dom. lun. mar. mie. jue. >"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="10dp"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="143dp"
                    android:layout_height="19dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="Sonido"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="Ocean whisper >"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="10dp"/>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="143dp"
                    android:layout_height="19dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="Nombre"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="A despertar >"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView14"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="10dp"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="143dp"
                    android:layout_height="19dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="Duración timbre"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="15 minutos >"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView16"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="10dp"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="143dp"
                    android:layout_height="19dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="Posponer"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="5 minutos >"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white2"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/dark1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:minHeight="60dp"
                android:text="@string/eliminar"
                android:textAllCaps="false"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        app:cardBackgroundColor="@color/grey2"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horaAlarma1"
                android:textAlignment="center"
                android:textColor="@color/white2"
                android:textSize="50sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

